# PriceMonitor

./: Cargo.toml  README.md
src/: alert.rs  gemini.rs  main.rs  prices.rs
