[package]
name = "PriceMonitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86"}
chrono = { version = "0.4.38" }
clap = { version = "4.5.3", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
reqwest = { version = "0.12.5" }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = { version = "1.0.122" }
tokio = { version = "1.39.2", features = ["full"] }
